2002-03-05  jacob berkman  <jacob@ximian.com>

	* configure.in: fix some quoting, and add $(X_LIBS) and
	$(X_EXTRA_LIBS) to the Xinerama and Xdmcp checks, since GTK
	doesn't export them any more

	* daemon/Makefile.am (gdm_LDADD): add $(X_LIBS) and -lXext since
	GTK doesn't export them any more

2002-03-01  Havoc Pennington  <hp@redhat.com>

	* config/locale.alias: remove broken generic "english" entry
	(created invalid LANG). Only have en_US and en_GB.

2002-02-18  Gediminas Paulauskas <menesis@delfi.lt>

	* configure.in: remove non-existing GNOME_PLATFORM_GNOME_2
	fix GNOME_COMPILE_WARNINGS for latest gnome-common.

2002-02-10  Abel Cheung  <maddog@linux.org.hk>

	* daemon/verify-shadow.c (gdm_verify_user): Synced string
	with that of verify-pam.c, to avoid translating virtually
	equivalent strings.

Fri Feb  8 19:40:07 2002  Jonathan Blandford  <jrb@redhat.com>

	* gui/greeter/greeter_action_language.c
	(greeter_langauge_initialize_model): use the right column.

Fri Feb  8 17:33:20 2002  Jonathan Blandford  <jrb@redhat.com>

	* gui/greeter/greeter_action_language.c (greeter_action_language):
	first cut at language selection.

2002-02-07  Alex Larsson  <alexl@redhat.com>

	* gui/greeter/Makefile.am (INCLUDES):
	Fix for building with srcdir != builddir.

2002-02-07  Alex Larsson  <alexl@redhat.com>

	* gui/gdmlogin.c:
	Set the cursor on the root window.

2002-02-07  Alex Larsson  <alexl@redhat.com>

	* configure.in:
	Remove libgnomeui from greeter libs.
	
	* gui/gdmwm.c:
	Comment out unused bonobo_dock_item_grab_pointer()
	that forces greeter to pull in libgnomeui.

	* gui/gdmwm.h:
	Don't include libgnomeui.h
	
	* gui/greeter/greeter.c:
	Include unistd.h
	
2002-02-06  Alex Larsson  <alexl@redhat.com>

	* gui/greeter/Makefile.am:
	Add greeter_session.[ch].

	* gui/greeter/greeter.[ch]:
	* gui/greeter/greeter_configuration.h:
	Hook up session code.
	Read more config settings.
	Export greeter_message(), greeter_query()
	and greeter_abort()
